--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 resolver = "3"
 
 [workspace.package]
-version = "0.2.2"
+version = "0.3.0"
 edition = "2024"
 description = "Model Express: High-performance model serving and management"
 authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
@@ -34,9 +34,9 @@ hf-hub = { version = "0.4.3", default-features = false, features = [
     "rustls-tls",
 ] }
 jiff = { version = "0.2.15", features = ["serde"] }
-modelexpress-common = { path = "modelexpress_common", version = "0.2.2" }
-modelexpress-client = { path = "modelexpress_client", version = "0.2.2" }
-modelexpress-server = { path = "modelexpress_server", version = "0.2.2" }
+modelexpress-common = { path = "modelexpress_common", version = "0.3.0" }
+modelexpress-client = { path = "modelexpress_client", version = "0.3.0" }
+modelexpress-server = { path = "modelexpress_server", version = "0.3.0" }
 once_cell = "1.21.3"
 prost = "0.13"
 rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
@@ -55,7 +55,12 @@ thiserror = "2.0"
 redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
 
 # Kubernetes client (kube-rs) for CRD-based metadata backend
-kube = { version = "0.98", features = ["client", "runtime", "derive", "rustls-tls"], default-features = false }
+kube = { version = "0.98", features = [
+    "client",
+    "runtime",
+    "derive",
+    "rustls-tls",
+], default-features = false }
 k8s-openapi = { version = "0.24", features = ["v1_31"] }
 schemars = "0.8"
 base64 = "0.22"
