--- a/modelexpress_client/python/pyproject.toml
+++ b/modelexpress_client/python/pyproject.toml
@@ -6,8 +6,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "modelexpress"
-version = "0.2.2"
+version = "0.3.0
 description = "Python client for ModelExpress P2P GPU transfer service"
 readme = "README.md"
 license = {text = "Apache-2.0"}
@@ -56,3 +55,4 @@ include = ["modelexpress*"]
 
 [tool.setuptools.package-data]
 modelexpress = ["py.typed"]
+name = "modelexpress"
